--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,286 @@
-.App {
+.footer {
+  color: black;
+  font-family: 'Raleway', Raleway, Arial, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: .8;
+  font-weight: 900;
+
+
+}
+
+h1#window-size {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+
+body {
+  font-family: 'Raleway', Raleway, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  color: #111111;
+  line-height: 1.4;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 60px;
+  line-height: .8;
+  font-weight: 900;
+}
+.job-title {
+   text-align: center;
+  text-transform: uppercase;
+  font-size: 15px;
+  line-height: .8;
+  font-weight: 900;
+}
+.blog {
+  text-align: center;
+}
+.projects {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  /*border: 1px solid;*/
+  flex:1;
+}
+
+#about {
+  width: ;
+ }
+h2, h3, h4, h5, h6 {
+  font-weight: 900;
+}
+h2 {
+  text-align: center;
+}
+header {
+  background-image: url('https://i.imgur.com/LIOBDHj.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 14% 0 23% 0;
+  position: relative;
+  background-size: cover;
+}
+
+nav {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  right: 0;
+  font-size: 1.25em;
+  text-transform: lowercase;
+  text-align: center;
+  color: #222222;
+}
+
+nav a {
+  display: inline-block;
+  margin: .5em 2%;
+  padding-bottom: .125em;
+}
+
+nav a:hover, nav a.current {
+  border-bottom: 1px solid;
+}
+
+#mobile {
+  display: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  width: 50%;
+/*  border: 1px solid;*/
+}
+.about {
+  display: flex;
+  background-color: #dddddd;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+#dancer {
+  width: 70%;
 }
 
-.App-link {
-  color: #61dafb;
+#foodie {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+#nashville {
+  width: 80%;
+  justify-content: center;
+}
+
+#cyclist {
+width: 100%;
+}
+
+#world {
+  width: 90%;
+}
+
+td {
+  text-align: center;
+font-weight: bold;
+/*border: 1px solid;*/
+width: 10%;
+
+}
+
+table {
+/*  position: absolute;*/
+  justify-content: center;
+  border: 1px solid;
+}
+
+.thumbnail {
+  width: 31.3333%;
+  float: left;
+  margin: 1%;
+  display: block;
+}
+
+.thumbnail:hover {
+  opacity: .9;
+  filter: alpha(opacity=90);
+}
+
+section {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ footer {
+  background-color: #1364b9;
+  border: 5px solid;
+  padding: 30px;
+}
+
+footer p {
+  display: inline-block;
+}
+
+ footer #social {
+  float: right;
+  color: #444;
+}
+
+ footer #social a {
+  margin-left: .5em;
+  color: black;
+}
+
+textarea {
+  line-height: 1.4;
+}
+
+
+/*-------------------
+  Home page
+--------------------*/
+
+.home section {
+  padding: 1%;
+  overflow: hidden;
+}
+
+
+
+
+@media only screen and (min-width: 1800px) {
+  body {
+    font-size: 40px;
   }
 }
+
+@media only screen and (min-width: 1500px) {
+  body {
+    font-size: 30px;
+  }
+
+  .thumbnail {
+    width: 23%;
+  }
+  #project1 {
+  height: 10%;
+}
+}
+
+@media only screen and (max-width: 1000px) {
+  .thumbnail {
+    width: 48%;
+  }
+  #project1 {
+  height: 20%;
+}
+}
+
+@media only screen and (max-width: 650px) {
+  body {
+    font-size: 16px;
+  }
+
+  header {
+    position: relative;
+    height: 15em;
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+  }
+
+  h1 {
+    position: absolute;
+    font-size: 2em;
+    top: 0;
+    left: .5em;
+  }
+
+  h3, .job-title {
+    position: absolute;
+    font-size: 15px;
+    top: 50px;
+    left: 20px;
+  }
+
+#project1 {
+  height: 40%;
+  border: 5px solid;
+  border-radius: 5px;
+}
+
+  nav {
+    text-align: right;
+    font-size: 1em;
+    color: black;
+  }
+
+  nav a {
+    display: none;
+    font-size: 1.25em;
+    padding-right: 1em;
+  }
+
+  nav a:hover, nav a.current {
+    border-bottom: none;
+  }
+
+  #mobile {
+    font-size: 2em;
+    margin: .75em;
+    display: block;
+    padding-right: 0;
+  }
+
+  .thumbnail {
+    width: 98%;
+  }
+}
+
