--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .footer {
-  color: black;
+  color: white;
   font-family: 'Raleway', Raleway, Arial, sans-serif;
   text-align: center;
   text-transform: uppercase;
   font-size: 15px;
   line-height: .8;
   font-weight: 900;
+  width: 100%;
 
 
 }
@@ -23,12 +24,12 @@ body {
   line-height: 1.4 !important;
 }
 
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 60px;
-  line-height: .8;
-  font-weight: 900;
+.sarahCurrey {
+  text-align: center !important;
+  text-transform: uppercase !important;
+  font-size: 60px !important;
+  line-height: .8 !important;
+  font-weight: 900 !important;
 }
 .job-title {
    text-align: center;
@@ -48,15 +49,30 @@ h1 {
   flex:1;
 }
 
+
+
+.draft {
+  display: inline-flex;
+}
+
 #about {
-  width: ;
- }
+  margin-left: 50%;
+  position: absolute;
+  left: 0;
+  padding-top: 5%;
+}
+.aboot {
+  margin-top: 5%;
+}
+.scurr {
+  margin-left: 8%;
+  width: 300px;
+}
+
 h2, h3, h4, h5, h6 {
   font-weight: 900;
 }
-h2 {
-  text-align: center;
-}
+
 header {
   background-image: url('https://i.imgur.com/LIOBDHj.png');
   background-repeat: no-repeat;
@@ -69,12 +85,14 @@ header {
 nav {
   position: absolute !important;
   width: 100% !important;
+  text-align: center;
   top: 0 !important;
-  right: 0 !important;
+  left: 30%;
+
   font-size: 1.25em !important;
   text-transform: lowercase !important;
-  text-align: center !important;
-  color: #222222 !important;
+
+  color: black !important;
 }
 
 nav a {
@@ -88,12 +106,12 @@ nav a:hover, nav a.current {
 }
 
 #mobile {
-  display: none;
+  display: none !important;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 img {
@@ -192,7 +210,40 @@ textarea {
   overflow: hidden;
 }
 
+.headProjects {
+  text-align: center;
+  padding-top: 3%;
+}
 
+
+
+.CardImg {
+  width: 40%;
+  height: 40%;
+
+}
+
+.cityscape {
+  background-image: url('https://png.pngtree.com/thumb_back/fh260/back_pic/04/49/55/11585b9f862bb3f.jpg');
+  width: 700px;
+  height: 400px;
+  margin: 0;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  animation: move 20s linear infinite;
+
+
+}
+/*background animation to change the position*/
+@keyframes move {
+  0% {
+    background-position:1400px
+     }
+  100% {
+    background-position:0
+  }
+}
 
 
 @media only screen and (min-width: 1800px) {
@@ -236,7 +287,7 @@ textarea {
     padding: 0;
   }
 
-  h1 {
+  .sarahCurrey {
     position: absolute;
     font-size: 2em;
     top: 0;
@@ -286,7 +337,7 @@ textarea {
 
 .moreHomeCards, .moreThings{
   width: 300px;
-  height: 300px;
+  height: 500px;
   margin: 20px;
 }
 
@@ -299,5 +350,26 @@ textarea {
   border-top: 1px solid rgb(235, 235, 235);
   padding: 30px;
 
+}
+
+
+.bike svg {
+  position: absolute;
+  width: 20%;
+  height: 65%;
+}
+
+#back_wheel {
+    animation: spin 3.5s linear infinite;
+    transform-origin: 115px 425px;
+}
+#front_wheel {
+    animation: spin 3.5s linear infinite;
+    transform-origin: 400px 432px;
+}
+
+@keyframes spin {
+  0% { transform:rotate(0deg); }
+  100% { transform:rotate(360deg); }
 }
 
